# Internets

./: .gitignore  AUDIT.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  KEY_ROTATION.md  LICENSE  PRIVACY.md  README.md  README_NEW.md  SECURITY.md  SETUP.md  THREAT_MODEL.md  admin_cmds.py  audit_log.py  botlog.py  config  config.ini  config.ini.example  config.py  console.py  hashpw.py  index  internets.py  metrics.py  packed-refs  process_lock.py  protocol.py  pyproject.toml  requirements.txt  secret_store.py  secrets.ini.example  sender.py  store.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: codeql.yml  security.yml  tests.yml
docs/: architecture.md  conf.py  configuration.md  deployment.md  getting-started.md  index.md  modules.md  providers.md  security-model.md
logs/refs/heads/: main
modules/: __init__.py  _netsafe.py  advice.py  apod.py  astro2.py  base.py  bofh.py  bored.py  calc.py  catfact.py  channels.py  chuck.py  cocktail.py  cowsay.py  crypto.py  dadjoke.py  devtools.py  devutils.py  dice.py  dictionary.py  dnd.py  dnsutils.py  encode.py  example.py  fact.py  fml.py  fx.py  games.py  geocode.py  ghinfo.py  health.py  hn.py  httpcode.py  idlerpg.py  imdb.py  ipinfo.py  ipintel.py  iss.py  lastfm.py  location.py  (+34 more)
objects/pack/: pack-8b521f752a17fb9ea98f10ad55a93f8460583f97.idx  pack-8b521f752a17fb9ea98f10ad55a93f8460583f97.pack  pack-8b521f752a17fb9ea98f10ad55a93f8460583f97.rev
refs/heads/: main
scripts/: build-docs.sh  regen-lockfile.sh  remap-doc-citations.py  sbom.sh  verify_install.sh
tests/: conftest.py  run_tests.py  test_admin_cmds.py  test_airnow_purpleair.py  test_astro2.py  test_audit_log.py  test_botlog.py  test_calc.py  test_config.py  test_crypto_cache.py  test_devtools.py  test_dispatcher.py  test_dnsutils.py  test_encode.py  test_fetch_json.py  test_ghinfo.py  test_hashpw.py  test_help.py  test_ipintel.py  test_mathx.py  test_metrics.py  test_modules_base.py  test_netsafe.py  test_new_weather_capabilities.py  test_numberfact.py  test_physcalc.py  test_pkginfo.py  test_pkginfo_validate.py  test_probe.py  test_process_lock.py  test_protocol.py  test_provider_fixes.py  test_reflookup.py  test_satpass.py  test_scinews.py  test_secinfo.py  test_secret_store.py  test_sender.py  test_stocks.py  test_store.py  (+1 more)
weather_providers/: __init__.py  _dispatch.py  _health.py  _http.py  base.py  openmeteo.py  tomorrowio.py  weatherapi.py
weather_providers/accuweather/: __init__.py  alerts.py  current.py  forecast.py  hourly.py
weather_providers/airnow/: __init__.py  air_quality.py
weather_providers/currentuvindex/: __init__.py  uv.py
weather_providers/eccc/: __init__.py  alerts.py
weather_providers/firms/: __init__.py  wildfire.py
weather_providers/gdacs/: __init__.py  alerts.py
weather_providers/google_pollen/: __init__.py  pollen.py
weather_providers/iqair/: __init__.py  air_quality.py
weather_providers/meteomatics/: __init__.py  current.py  forecast.py  hourly.py
weather_providers/metno/: __init__.py  alerts.py  current.py  forecast.py  hourly.py  nowcast.py
weather_providers/nasapower/: __init__.py  historical.py
weather_providers/nifc/: __init__.py  wildfire.py
weather_providers/noaa_coops/: __init__.py  tides.py
weather_providers/nws/: __init__.py  _codes.py  _scope.py  alerts.py  current.py  forecast.py  hourly.py  marine.py
weather_providers/openaq/: __init__.py  air_quality.py
weather_providers/openmeteo/: __init__.py  _codes.py  air_quality.py  astronomy.py  current.py  forecast.py  historical.py  hourly.py  marine.py  nowcast.py  pollen.py  uv.py
weather_providers/openweathermap/: __init__.py  _codes.py  air_quality.py  alerts.py  current.py  forecast.py  hourly.py
weather_providers/pirateweather/: __init__.py  _codes.py  alerts.py  current.py  forecast.py  hourly.py  nowcast.py
weather_providers/pollendotcom/: __init__.py  pollen.py
weather_providers/purpleair/: __init__.py  _codes.py  air_quality.py
weather_providers/stormglass/: __init__.py  _codes.py  current.py  hourly.py  marine.py
weather_providers/sunrisesunset/: __init__.py  astronomy.py
weather_providers/swpc/: __init__.py  space_weather.py
weather_providers/tidecheck/: __init__.py  tides.py
weather_providers/tomorrowio/: __init__.py  _codes.py  air_quality.py  alerts.py  current.py  forecast.py  hourly.py
weather_providers/visualcrossing/: __init__.py  alerts.py  current.py  forecast.py  historical.py  hourly.py
weather_providers/waqi/: __init__.py  air_quality.py
weather_providers/weatherapi/: __init__.py  air_quality.py  alerts.py  astronomy.py  current.py  forecast.py  historical.py  hourly.py
weather_providers/weatherbit/: __init__.py  air_quality.py  alerts.py  current.py  forecast.py  historical.py  hourly.py
weather_providers/weatherkit/: __init__.py  _codes.py  alerts.py  current.py  forecast.py  hourly.py
weather_providers/weatherstack/: __init__.py  current.py  forecast.py  historical.py
weather_providers/worldweatheronline/: __init__.py  _codes.py  astronomy.py  current.py  forecast.py  historical.py  hourly.py  marine.py
