[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "internets-irc"
version = "3.0.0"
description = "Async modular IRC bot with weather, calculator, dice, translation, and more."
readme = "README.md"
license = {text = "ISC"}
requires-python = ">=3.10"
authors = [
    {name = "Brandon Troidl"},
]
keywords = ["irc", "bot", "asyncio", "weather", "modular"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Chat :: Internet Relay Chat",
]
# Version policy: lower bounds are the most recent stable release at
# session time (every package known to be CVE-free at this lower
# bound).  No upper bounds — pip always installs the newest compatible
# release.  CI covers Linux / macOS / Windows across Python 3.10 →
# 3.14, so any future-breaking upstream release surfaces in the next
# push.  Each lower bound below is annotated with the CVE / advisory
# it addresses where applicable.
dependencies = [
    "requests>=2.32.3",       # CVE-2024-35195 (PoolManager verify)
]

[project.optional-dependencies]
async = ["aiohttp>=3.10.11"]  # CVE-2024-52304 (chunked-encoding parser)
bcrypt = ["bcrypt>=4.2.0"]    # Rust-backed; current wheels
argon2 = ["argon2-cffi>=23.1.0"]
weatherkit = ["PyJWT>=2.10.1", "cryptography>=44.0.0"]
# CVE-2024-53861 (JWT header confusion); cryptography 44 removes
# legacy TLS 1.0/1.1 + ships current OpenSSL.
xml = ["defusedxml>=0.7.1"]
all = [
    "aiohttp>=3.10.11",
    "bcrypt>=4.2.0",
    "argon2-cffi>=23.1.0",
    "PyJWT>=2.10.1",
    "cryptography>=44.0.0",
    "defusedxml>=0.7.1",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "coverage>=7.6",
    "bandit[sarif]>=1.7.10",  # CVE-2024-34072 fix in 1.7.10
    "pip-audit>=2.7.3",
    "build>=1.2",
]

[project.urls]
Homepage = "https://github.com/brandontroidl/Internets"
Repository = "https://github.com/brandontroidl/Internets"
Issues = "https://github.com/brandontroidl/Internets/issues"
Changelog = "https://github.com/brandontroidl/Internets/blob/main/CHANGELOG.md"

[project.scripts]
internets = "internets:_entry"

[tool.setuptools]
py-modules = ["internets", "config", "botlog", "admin_cmds", "console", "sender", "store", "protocol", "hashpw", "secret_store"]

[tool.setuptools.packages.find]
include = ["modules*", "weather_providers*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# --strict-markers is also passed on the CLI in CI; keep it here so local
# runs catch typos in @pytest.mark.<name> too.
addopts = "--strict-markers"

[tool.coverage.run]
branch = true
source = ["."]
# CORE-ONLY coverage.  modules/* and weather_providers/* (the SSRF /
# dispatch / parsing bulk of the codebase) are omitted below, so the
# reported percentage and the fail_under gate measure the CORE only
# (top-level orchestration modules), NOT the whole repo.  Do not read
# the headline number as repo-wide coverage.
omit = [
    "tests/*",
    "build/*",
    "dist/*",
    ".venv/*",
    "weather_providers/*",  # excluded - keeps coverage core-only
    "modules/*",            # excluded - keeps coverage core-only
]

[tool.coverage.report]
show_missing = true
skip_covered = false
# CORE-ONLY gate: modules/* and weather_providers/* are omitted in
# [tool.coverage.run] above, so 75% is core-only, not whole-repo.
fail_under = 75
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist", ".git", "__pycache__"]
